Fix card Button Misalignment

--- a/bookingscss.css
+++ b/bookingscss.css
@@ -1,3 +1,7 @@
+body {
+  background-color: cadetblue;
+  font-family: sans-serif;
+}
 .nav_top {
   display: flex;
   flex-direction: row;
@@ -52,6 +56,7 @@ tr:hover {
   color: aliceblue;
   border-radius: 15px;
   background-color: darkslategrey;
+  height: 80%;
 }
 .modal_content {
   border: none;
@@ -68,9 +73,9 @@ tr:hover {
 .close {
   color: #ffffff;
   float: right;
-  font-size: 28px;
-  font-weight: bold;
-  align-self: flex-end;
+  font-size: 25px;
+  margin-right: 20px;
+  margin-top: 10px;
 }
 /* styling Form */
 form > div {
@@ -120,10 +125,33 @@ form > div > label {
   display: flex;
   justify-content: space-around;
   align-items: flex-start;
-  padding-left: 70px;
+  margin: auto;
   width: auto;
   height: auto;
-  flex-direction: column-reverse;
   flex-wrap: wrap;
   text-align: center;
+  padding: 30px;
 }
+
+.leftHeaderSection {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: stretch;
+  justify-content: center;
+  align-items: flex-end;
+}
+
+/*     display: none;
+    display: block;
+    text-align: center;
+    position: fixed;
+    overflow: auto;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 60%;
+    color: aliceblue;
+    border-radius: 15px;
+    background-color: darkslategrey;
+    height: 80%; */
